--- a/lumen-task-api/composer.json
+++ b/lumen-task-api/composer.json
@@ -2,6 +2,7 @@
     "name": "laravel/lumen-task-api",
     "autoload": {
         "psr-4": {
+            "App\\": "app/",
             "Laravel\\LumenTaskApi\\": "src/"
         }
     },
@@ -12,6 +13,18 @@
         }
     ],
     "require": {
-        "laravel/lumen": "^9.0"
-    }
+        "php": "^8.0|^8.1",
+        "laravel/lumen": "^8.3|^9.2",
+        "illuminate/database": "^8.83|^9.22"
+    },
+    "require-dev": {
+        "laravel/tinker": "^2.9"
+    },
+    "config": {
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "optimize-autoloader": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
